--- a/public/assets/styles/sass/abstracts/_varcolors.scss
+++ b/public/assets/styles/sass/abstracts/_varcolors.scss
@@ -17,6 +17,15 @@ $huge: '(min-width: 2000px)';
 // COULEURS PRINCIPALES
 // ====================================
 
+//sess mess success error alert
+$light_greenish_blue    : #55EFC4;
+$mint_feaf              : #00B894;
+$pink_Glamour           : #FF7675;
+$chi_Gong               : #D63031;
+$bright_yarrow          : #FDCB6E;
+$dracula_Orchid         : #2D3436;
+
+
 // Violet (Accueil)
 $violet-dark: #9220CB;
 $violet-main: #B239ED;
