--- a/public/assets/styles/sass/pages/login.scss
+++ b/public/assets/styles/sass/pages/login.scss
@@ -1,5 +1,8 @@
 @use '../abstracts/varcolors';
 @use '../abstracts/mixins';
+@use '../components/header';
+@use '../components/footer';
+
 
 // =================================
 // CONTENEUR PRINCIPAL LOGIN
