--- a/public/assets/styles/css/pages/register.css
+++ b/public/assets/styles/css/pages/register.css
@@ -4,13 +4,29 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 19vh;
+  height: 17.5vh;
   background-color: #000000;
-  z-index: 1000;
+  z-index: 2;
   padding: 1rem clamp(1rem, 3vw, 2rem);
 }
+@media (min-width: 768px) {
+  #header {
+    height: 18.5vh;
+  }
+}
+@media (min-width: 850px) {
+  #header {
+    height: 19vh;
+  }
+}
+@media (min-width: 992px) {
+  #header {
+    height: 22vh;
+  }
+}
 #header .rect {
-  position: relative;
+  position: fixed;
+  top: 2vh;
   background-image: url("../../img/Miaou/backgroundHeader.jpg");
   background-size: cover;
   background-position: center;
@@ -30,11 +46,9 @@
 }
 #header .rect::before {
   content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  position: fixed;
+  top: 2vh;
+  width: 90vh;
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.1) 0%, rgba(178, 57, 237, 0.1) 100%);
   pointer-events: none;
 }
@@ -208,6 +222,7 @@
   transition: left 0.6s cubic-bezier(0.4, 0, 0.2, 1);
   overflow-y: auto;
   padding-top: clamp(140px, 25vh, 180px);
+  z-index: 1;
 }
 #nav.open {
   left: 0;
@@ -309,7 +324,7 @@
 @media (min-width: 850px) {
   #nav {
     position: fixed;
-    top: 23vh;
+    top: 20vh;
     left: 0;
     width: 100%;
     max-width: none;
@@ -452,6 +467,18 @@
     box-shadow: 1px 2px 0px rgb(231.8722826087, 214.2445652174, 17.6277173913);
   }
 }
+@media (min-width: 850px) and (min-width: 992px) {
+  #nav {
+    position: fixed;
+    top: 21vh;
+  }
+}
+@media (min-width: 850px) and (min-width: 1100px) {
+  #nav {
+    position: fixed;
+    top: 20vh;
+  }
+}
 
 body {
   max-width: 100vw;
@@ -507,6 +534,109 @@ main {
   box-sizing: border-box;
 }
 
+/* Animation clignotement vert 
+@keyframes blink-success {
+  0%, 100% { background-color: #28a745; color: #fff; }
+  50% { background-color: transparent; color: #28a745; }
+}
+
+ Animation clignotement rouge 
+@keyframes blink-error {
+  0%, 100% { background-color: #dc3545; color: #fff; }
+  50% { background-color: transparent; color: #dc3545; }
+}
+
+.blink-success {
+  animation: blink-success 1s linear infinite;
+}
+
+.blink-error {
+  animation: blink-error 1s linear infinite;
+}*/
+/* Styles communs 
+.alert {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  color: varcolors.$blanc;
+  border-radius: 20px;
+  padding: .5em 1em;
+  margin: 1.5em auto; // centré horizontalement
+  box-sizing: border-box;
+  border: 2px solid;
+
+  > img {
+    width: 6em;
+    margin-right: 4em;
+  }
+}*/
+#session-message, .alert-success,
+#session-error, .alert-error,
+#session-alert, .alert-warning {
+  position: fixed;
+  z-index: 998;
+  top: 32vh;
+  left: 10%;
+  text-align: center;
+  font-size: 1vh;
+  width: 80%;
+  border-radius: 20px;
+  padding-top: 3vh;
+  border-bottom: 2px solid;
+  font-family: "Playwrite", sans-serif;
+  font-size: 2vh;
+}
+@media (min-width: 431px) {
+  #session-message, .alert-success,
+  #session-error, .alert-error,
+  #session-alert, .alert-warning {
+    left: 15%;
+    width: 70%;
+  }
+}
+@media (min-width: 576px) {
+  #session-message, .alert-success,
+  #session-error, .alert-error,
+  #session-alert, .alert-warning {
+    left: 20%;
+    font-size: 1.5rem;
+    width: 60%;
+  }
+}
+@media (min-width: 850px) {
+  #session-message, .alert-success,
+  #session-error, .alert-error,
+  #session-alert, .alert-warning {
+    top: 26vh; /* Calcul de la hauteur du header + nav */
+    left: 25%;
+    font-size: 2vh;
+    width: 50%;
+  }
+}
+@media (min-width: 992px) {
+  #session-message, .alert-success,
+  #session-error, .alert-error,
+  #session-alert, .alert-warning {
+    left: 30%;
+    font-size: 1.8rem;
+    width: 40%;
+  }
+}
+
+#session-message, .alert-success {
+  color: #55EFC4;
+}
+
+#session-error, .alert-error {
+  color: #FF7675;
+}
+
+#session-alert, .alert-warning {
+  color: #FDCB6E;
+}
+
 @media (min-width: 431px) {
   main {
     padding-top: 18vh; /* header + nav */
@@ -539,6 +669,12 @@ main {
   }
 }
 @media (min-width: 1600px) {
+  main {
+    padding-top: 35vh; /* header + nav */
+    padding-bottom: 25vh; /* footer */
+  }
+}
+@media (min-width: 2000px) {
   main {
     padding-top: 35vh; /* header + nav */
     padding-bottom: 25vh; /* footer */
