displayModifylogin et register OK modales d'alertes OK timer OK header/footer ok, page activite homeUser ok messages alert ok

--- a/public/assets/styles/css/pages/homepageUser.css
+++ b/public/assets/styles/css/pages/homepageUser.css
@@ -1363,6 +1363,10 @@ main {
     font-size: 18px;
   }
 }
+.alert-success, #session-message, .alert-error, #session-error, #session-alert, .alert {
+  color: #FF7675;
+}
+
 .homeUser-content {
   display: flex;
   flex-direction: column;
