--- a/views/templates/layout.html.twig
+++ b/views/templates/layout.html.twig
@@ -36,7 +36,7 @@
             {% endif %}
             
             {% if error_message is defined %}
-                <div id="session-error"t-error" role="alert">
+                <div id="session-error" class="alert alert-error" role="alert">
                     <p>{{ error_message }}</p>
                 </div>
             {% endif %}
