--- a/views/templates/homepageUser.html.twig
+++ b/views/templates/homepageUser.html.twig
@@ -1,10 +1,9 @@
 {% extends "layout.html.twig" %}
 
+{# Titre de la page #}
 {% block title %}
-      Miaou |Page Accueil 
+Miaou | Page Activités
 {% endblock %}
-
-
 
 {% block body %}
 
@@ -18,6 +17,7 @@
     
     {% block error %}
     {% endblock %}
+
         <section class="homeUser-content">
             <header class="homepageUser-header">
                 <h1>Bienvenue sur ta page d'activités !</h1>
@@ -62,12 +62,13 @@
                     </a>
                 </div>
             </article>
-        </section>
-       
-        {% endblock %}
+        </section>       
         
             
-{% endblock %}           
+{% endblock %}  
+
+
+{% endblock %}
         
        
 
